*2014-06-16	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.1.0
*	Pomfit goes crossplatform, Windows & Linux now available
*	Linux - login tweaks , settable hotkeys & some changes
*2014-06-16	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.6
*	Added - User accounts support
*2014-06-15	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.5c
*	Fixing last bug fix .. ahue
*	Some minor changes
*2014-06-14	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.5b
*	Fixing link issue with recent (temporary?)storage changes on pomf.se
*	Fix for crashes caused by pasted part of code~
*2014-04-22	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.5
*	Batch upload support & related changes
*	Little source code formatting for better readability (hopefully)
*	Some minor changes
*2014-04-18	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.4
*** Happy Easter everyone! ***
*	Added - File size limit check
*	Added - Upload status bar
*	Added - Keybind for file upload dialog 
*	Now you can cancel upload
*	UI will now update ,and won't freeze while uploading
*	Screencaps will be saved in home dir from now on
*	Default keybinds changed due to incompatibility on most Distros/DEs
*	File chooser now with image preview & 2 filters (all files/images)
*	Animated images preview optional (not resized therefore isn't recommended for everyone)
*	Some minor changes
*2014-03-28	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.3
*	Added tray menu items for file/screencap upload.Added .desktop file.
*	Opening file from file manager with pomfit should upload it.
*	Pomfit will run only one instance now.
*2014-03-7	Senketsu <senketsu.dev@gmail.com>
*	Fixed bug that caused uploader to crash when uploadig file with whitespace characters in name.
*	Also little cosmetic changes in code & now log saves filename instead fullpath&filename
*
*2014-03-4	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.2
*	Added "upload" log , might be useful sometimes
*